# M5AtomMotionSolarTracker

./: .gitattributes  .gitignore  AtomMotion.cpp  AtomMotion.h  CMakeLists.txt  M5AtomMotionSolarTracker.h  M5AtomMotionSolarTracker.ino  MinimalExample.txt  README.md
M5Libs/: M5Atom.cpp
